{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 265,
  "lineage": "bf8b7bf9-7b01-240c-b6e0-ae495e0c2950",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bos_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0770a531cac185cfb",
            "arn": "arn:aws:ec2:us-east-1:891377135193:elastic-ip/eipalloc-0770a531cac185cfb",
            "domain": "vpc",
            "id": "eipalloc-0770a531cac185cfb",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-95-224-186.compute-1.amazonaws.com",
            "public_ip": "98.95.224.186",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-nat-eip01"
            },
            "tags_all": {
              "Name": "bos-nat-eip01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bos_ec201_private_bonus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:891377135193:instance/i-076c469a1b479e271",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bos-instance-profile01",
            "id": "i-076c469a1b479e271",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02f8f41ff74dfedb1"
              }
            ],
            "primary_network_interface_id": "eni-02f8f41ff74dfedb1",
            "private_dns": "ip-10-26-101-193.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.26.101.193",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-027f88eec8fd6b5df",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4cd6b149f5e907a",
            "tags": {
              "Name": "bos-ec201-private"
            },
            "tags_all": {
              "Name": "bos-ec201-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09191dbbd6ec29309"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "i-076c469a1b479e271",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.bos_instance_profile01",
            "aws_iam_role.bos_ec2_role01",
            "aws_security_group.bos_ec2_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bos_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:internet-gateway/igw-0e134c577dd75f311",
            "id": "igw-0e134c577dd75f311",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-igw01"
            },
            "tags_all": {
              "Name": "bos-igw01"
            },
            "vpc_id": "vpc-0d91832dcb5d5e861"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "bos_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "bos-alb-logs-lh-891377135193",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/fed48919514d3a52",
            "arn_suffix": "app/bos-alb01/fed48919514d3a52",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "bos-alb01-301576868.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/fed48919514d3a52",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bos-alb01",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0d732e4dfe934bd0c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-043bd3c2ec831c189"
              },
              {
                "subnet_id": "subnet-0b9c17f7d0e4fe268"
              }
            ],
            "subnets": [
              "subnet-043bd3c2ec831c189",
              "subnet-0b9c17f7d0e4fe268"
            ],
            "tags": {
              "Name": "bos-alb01"
            },
            "tags_all": {
              "Name": "bos-alb01"
            },
            "vpc_id": "vpc-0d91832dcb5d5e861",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/fed48919514d3a52"
          },
          "dependencies": [
            "aws_s3_bucket.bos_alb_logs_bucket01",
            "aws_security_group.bos_alb_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "bos_http_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/fed48919514d3a52/106ffd6af6ae1ad2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/fed48919514d3a52/106ffd6af6ae1ad2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/fed48919514d3a52",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/fed48919514d3a52/106ffd6af6ae1ad2"
          },
          "dependencies": [
            "aws_lb.bos_alb01",
            "aws_s3_bucket.bos_alb_logs_bucket01",
            "aws_security_group.bos_alb_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "bos_https_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/fed48919514d3a52/190eb87e9a156bb2",
            "certificate_arn": "arn:aws:acm:us-east-1:891377135193:certificate/e7ee8d31-70f7-411a-9579-4c944fcd83c4",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/5ee405f54f657ad8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/fed48919514d3a52/190eb87e9a156bb2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/fed48919514d3a52",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/fed48919514d3a52/190eb87e9a156bb2"
          },
          "dependencies": [
            "aws_acm_certificate.bos_acm_cert01",
            "aws_acm_certificate_validation.bos_acm_validation01",
            "aws_lb.bos_alb01",
            "aws_lb_target_group.bos_tg01",
            "aws_route53_record.bos_acm_validation_records01",
            "aws_s3_bucket.bos_alb_logs_bucket01",
            "aws_security_group.bos_alb_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "bos_default_block01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Forbidden",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener-rule/app/bos-alb01/fed48919514d3a52/190eb87e9a156bb2/74986c80ff7206b3",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener-rule/app/bos-alb01/fed48919514d3a52/190eb87e9a156bb2/74986c80ff7206b3",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/fed48919514d3a52/190eb87e9a156bb2",
            "priority": 99,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener-rule/app/bos-alb01/fed48919514d3a52/190eb87e9a156bb2/74986c80ff7206b3"
          },
          "dependencies": [
            "aws_acm_certificate.bos_acm_cert01",
            "aws_acm_certificate_validation.bos_acm_validation01",
            "aws_lb.bos_alb01",
            "aws_lb_listener.bos_https_listener01",
            "aws_lb_target_group.bos_tg01",
            "aws_route53_record.bos_acm_validation_records01",
            "aws_s3_bucket.bos_alb_logs_bucket01",
            "aws_security_group.bos_alb_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "bos_require_origin_header01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/5ee405f54f657ad8",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener-rule/app/bos-alb01/fed48919514d3a52/190eb87e9a156bb2/463022319327a84f",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "X-BOS-Growl",
                    "regex_values": [],
                    "values": [
                      "5uO7o1nJLdyVvt7o4D0LwoW84d083r4w"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener-rule/app/bos-alb01/fed48919514d3a52/190eb87e9a156bb2/463022319327a84f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/fed48919514d3a52/190eb87e9a156bb2",
            "priority": 10,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "condition"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener-rule/app/bos-alb01/fed48919514d3a52/190eb87e9a156bb2/463022319327a84f"
          },
          "dependencies": [
            "aws_acm_certificate.bos_acm_cert01",
            "aws_acm_certificate_validation.bos_acm_validation01",
            "aws_lb.bos_alb01",
            "aws_lb_listener.bos_https_listener01",
            "aws_lb_target_group.bos_tg01",
            "aws_route53_record.bos_acm_validation_records01",
            "aws_s3_bucket.bos_alb_logs_bucket01",
            "aws_security_group.bos_alb_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01",
            "random_password.bos_origin_header_value01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "bos_tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/5ee405f54f657ad8",
            "arn_suffix": "targetgroup/bos-tg01/5ee405f54f657ad8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/5ee405f54f657ad8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bos-tg01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "bos-tg01"
            },
            "tags_all": {
              "Name": "bos-tg01"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d91832dcb5d5e861"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/5ee405f54f657ad8"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "bos_tg_attach01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/5ee405f54f657ad8-2026012009243441970000000e",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/5ee405f54f657ad8",
            "target_id": "i-076c469a1b479e271"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.bos_instance_profile01",
            "aws_iam_role.bos_ec2_role01",
            "aws_instance.bos_ec201_private_bonus",
            "aws_lb_target_group.bos_tg01",
            "aws_security_group.bos_ec2_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "bos_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0770a531cac185cfb",
            "association_id": "eipassoc-0f54cede266c24cb3",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-03839ec596846b93b",
            "network_interface_id": "eni-09dc92e92c507ed3b",
            "private_ip": "10.26.1.31",
            "public_ip": "98.95.224.186",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-043bd3c2ec831c189",
            "tags": {
              "Name": "bos-nat01"
            },
            "tags_all": {
              "Name": "bos-nat01"
            },
            "vpc_id": "vpc-0d91832dcb5d5e861"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.bos_nat_eip01",
            "aws_internet_gateway.bos_igw01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "bos_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01c45b4e04e9f04a01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03839ec596846b93b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-01c45b4e04e9f04a0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-01c45b4e04e9f04a0"
          },
          "dependencies": [
            "aws_eip.bos_nat_eip01",
            "aws_internet_gateway.bos_igw01",
            "aws_nat_gateway.bos_nat01",
            "aws_route_table.bos_private_rt01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "bos_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e134c577dd75f311",
            "id": "r-rtb-0dd312dcf747a9d971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0dd312dcf747a9d97",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0dd312dcf747a9d97"
          },
          "dependencies": [
            "aws_internet_gateway.bos_igw01",
            "aws_route_table.bos_public_rt01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bos_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:route-table/rtb-01c45b4e04e9f04a0",
            "id": "rtb-01c45b4e04e9f04a0",
            "owner_id": "891377135193",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "bos-private-rt01"
            },
            "tags_all": {
              "Name": "bos-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d91832dcb5d5e861"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "rtb-01c45b4e04e9f04a0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bos_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:route-table/rtb-0dd312dcf747a9d97",
            "id": "rtb-0dd312dcf747a9d97",
            "owner_id": "891377135193",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "bos-public-rt01"
            },
            "tags_all": {
              "Name": "bos-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d91832dcb5d5e861"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "rtb-0dd312dcf747a9d97",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bos_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dbf1b9871c28796",
            "region": "us-east-1",
            "route_table_id": "rtb-01c45b4e04e9f04a0",
            "subnet_id": "subnet-0c4cd6b149f5e907a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bos_private_rt01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3826ba0198ce6ba",
            "region": "us-east-1",
            "route_table_id": "rtb-01c45b4e04e9f04a0",
            "subnet_id": "subnet-0539fe785f803f6af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bos_private_rt01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bos_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b256312bf7be0e4",
            "region": "us-east-1",
            "route_table_id": "rtb-0dd312dcf747a9d97",
            "subnet_id": "subnet-043bd3c2ec831c189"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bos_public_rt01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2fecc5c617ca32b",
            "region": "us-east-1",
            "route_table_id": "rtb-0dd312dcf747a9d97",
            "subnet_id": "subnet-0b9c17f7d0e4fe268"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bos_public_rt01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bos_alb_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group/sg-0d732e4dfe934bd0c",
            "description": "ALB security group",
            "egress": [],
            "id": "sg-0d732e4dfe934bd0c",
            "ingress": [],
            "name": "bos-alb-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bos-alb-sg01"
            },
            "tags_all": {
              "Name": "bos-alb-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d91832dcb5d5e861"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-0d732e4dfe934bd0c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bos_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group/sg-09191dbbd6ec29309",
            "description": "EC2 app security group",
            "egress": [],
            "id": "sg-09191dbbd6ec29309",
            "ingress": [],
            "name": "bos-ec2-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bos-ec2-sg01"
            },
            "tags_all": {
              "Name": "bos-ec2-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d91832dcb5d5e861"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-09191dbbd6ec29309",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bos_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group/sg-01599746f86c15f5a",
            "description": "RDS security group",
            "egress": [],
            "id": "sg-01599746f86c15f5a",
            "ingress": [],
            "name": "bos-rds-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bos-rds-sg01"
            },
            "tags_all": {
              "Name": "bos-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d91832dcb5d5e861"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-01599746f86c15f5a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bos_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group/sg-0abf1bdb572635b1d",
            "description": "SG for VPC Interface Endpoints",
            "egress": [],
            "id": "sg-0abf1bdb572635b1d",
            "ingress": [],
            "name": "bos-vpce-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bos-vpce-sg01"
            },
            "tags_all": {
              "Name": "bos-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d91832dcb5d5e861"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-0abf1bdb572635b1d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bos_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:subnet/subnet-0c4cd6b149f5e907a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.26.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4cd6b149f5e907a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-private-subnet01"
            },
            "tags_all": {
              "Name": "bos-private-subnet01"
            },
            "vpc_id": "vpc-0d91832dcb5d5e861"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-0c4cd6b149f5e907a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:subnet/subnet-0539fe785f803f6af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.26.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0539fe785f803f6af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-private-subnet02"
            },
            "tags_all": {
              "Name": "bos-private-subnet02"
            },
            "vpc_id": "vpc-0d91832dcb5d5e861"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-0539fe785f803f6af",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bos_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:subnet/subnet-043bd3c2ec831c189",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.26.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043bd3c2ec831c189",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-public-subnet01"
            },
            "tags_all": {
              "Name": "bos-public-subnet01"
            },
            "vpc_id": "vpc-0d91832dcb5d5e861"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-043bd3c2ec831c189",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:subnet/subnet-0b9c17f7d0e4fe268",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.26.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9c17f7d0e4fe268",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-public-subnet02"
            },
            "tags_all": {
              "Name": "bos-public-subnet02"
            },
            "vpc_id": "vpc-0d91832dcb5d5e861"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-0b9c17f7d0e4fe268",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bos_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc/vpc-0d91832dcb5d5e861",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.26.0.0/16",
            "default_network_acl_id": "acl-09d3f683d06564ba6",
            "default_route_table_id": "rtb-0f63d763e302ca4d6",
            "default_security_group_id": "sg-0b59fa31eba9c8459",
            "dhcp_options_id": "dopt-01a7c7fae7f55da14",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d91832dcb5d5e861",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f63d763e302ca4d6",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-vpc01"
            },
            "tags_all": {
              "Name": "bos-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpc-0d91832dcb5d5e861",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_ec2messages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-09e806a6126a61a85",
            "dns_entry": [
              {
                "dns_name": "vpce-09e806a6126a61a85-zpuajh47.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-09e806a6126a61a85-zpuajh47-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-09e806a6126a61a85-zpuajh47-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02276792KPQBNBKVPCNF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09e806a6126a61a85",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00d613264d633a419",
              "eni-0201d8396b3781f10"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0abf1bdb572635b1d"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.237",
                "subnet_id": "subnet-0c4cd6b149f5e907a"
              },
              {
                "ipv4": "10.26.102.164",
                "subnet_id": "subnet-0539fe785f803f6af"
              }
            ],
            "subnet_ids": [
              "subnet-0539fe785f803f6af",
              "subnet-0c4cd6b149f5e907a"
            ],
            "tags": {
              "Name": "bos-vpce-ec2messages01"
            },
            "tags_all": {
              "Name": "bos-vpce-ec2messages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d91832dcb5d5e861"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-09e806a6126a61a85",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_kms01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-08814d7b54dac4bb7",
            "dns_entry": [
              {
                "dns_name": "vpce-08814d7b54dac4bb7-yrottzq1.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08814d7b54dac4bb7-yrottzq1-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08814d7b54dac4bb7-yrottzq1-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01197882LISEW5LGI3AD"
              },
              {
                "dns_name": "kms.us-east-1.api.aws",
                "hosted_zone_id": "Z00900522CHBHV5WAO50Y"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08814d7b54dac4bb7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-091c3b32deddbe911",
              "eni-0dc803e4bb51f57d5"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0abf1bdb572635b1d"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.243",
                "subnet_id": "subnet-0c4cd6b149f5e907a"
              },
              {
                "ipv4": "10.26.102.233",
                "subnet_id": "subnet-0539fe785f803f6af"
              }
            ],
            "subnet_ids": [
              "subnet-0539fe785f803f6af",
              "subnet-0c4cd6b149f5e907a"
            ],
            "tags": {
              "Name": "bos-vpce-kms01"
            },
            "tags_all": {
              "Name": "bos-vpce-kms01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d91832dcb5d5e861"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-08814d7b54dac4bb7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_logs01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-05c60fd913839cb73",
            "dns_entry": [
              {
                "dns_name": "vpce-05c60fd913839cb73-9zoa6tkn.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05c60fd913839cb73-9zoa6tkn-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05c60fd913839cb73-9zoa6tkn-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00888301AMVYXY0LIEGF"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06148683SYL4S6G6PSF"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0622458QCD5FEYSXCWL"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z01425452EJX2KTD5VXXU"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05c60fd913839cb73",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0328d0721e4b5f261",
              "eni-0d7ad67891cd646ba"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0abf1bdb572635b1d"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.7",
                "subnet_id": "subnet-0c4cd6b149f5e907a"
              },
              {
                "ipv4": "10.26.102.46",
                "subnet_id": "subnet-0539fe785f803f6af"
              }
            ],
            "subnet_ids": [
              "subnet-0539fe785f803f6af",
              "subnet-0c4cd6b149f5e907a"
            ],
            "tags": {
              "Name": "bos-vpce-logs01"
            },
            "tags_all": {
              "Name": "bos-vpce-logs01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d91832dcb5d5e861"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-05c60fd913839cb73",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_s3_gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-068e3fdd09f9b1b75",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-068e3fdd09f9b1b75",
            "ip_address_type": "ipv4",
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01c45b4e04e9f04a0"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "bos-vpce-s3-gw01"
            },
            "tags_all": {
              "Name": "bos-vpce-s3-gw01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0d91832dcb5d5e861"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-068e3fdd09f9b1b75",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.bos_private_rt01",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_secrets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-01557389fc0604af1",
            "dns_entry": [
              {
                "dns_name": "vpce-01557389fc0604af1-2ffncr66.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01557389fc0604af1-2ffncr66-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01557389fc0604af1-2ffncr66-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0082418186CO0HZKSN36"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01557389fc0604af1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06cdbf9c7c26a5510",
              "eni-0a67d55b8a95c4c09"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0abf1bdb572635b1d"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.140",
                "subnet_id": "subnet-0c4cd6b149f5e907a"
              },
              {
                "ipv4": "10.26.102.244",
                "subnet_id": "subnet-0539fe785f803f6af"
              }
            ],
            "subnet_ids": [
              "subnet-0539fe785f803f6af",
              "subnet-0c4cd6b149f5e907a"
            ],
            "tags": {
              "Name": "bos-vpce-secrets01"
            },
            "tags_all": {
              "Name": "bos-vpce-secrets01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d91832dcb5d5e861"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-01557389fc0604af1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_ssm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-0b1d849dc2d39aabf",
            "dns_entry": [
              {
                "dns_name": "vpce-0b1d849dc2d39aabf-985da3y5.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b1d849dc2d39aabf-985da3y5-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b1d849dc2d39aabf-985da3y5-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z022923429FO50NE8VB0H"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z014332717K6UZTU3BBCV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b1d849dc2d39aabf",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-074dc58a9c1085267",
              "eni-0c53f7de666775a49"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0abf1bdb572635b1d"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.209",
                "subnet_id": "subnet-0c4cd6b149f5e907a"
              },
              {
                "ipv4": "10.26.102.79",
                "subnet_id": "subnet-0539fe785f803f6af"
              }
            ],
            "subnet_ids": [
              "subnet-0539fe785f803f6af",
              "subnet-0c4cd6b149f5e907a"
            ],
            "tags": {
              "Name": "bos-vpce-ssm01"
            },
            "tags_all": {
              "Name": "bos-vpce-ssm01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d91832dcb5d5e861"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-0b1d849dc2d39aabf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_ssmmessages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-08761ba602bfd1b09",
            "dns_entry": [
              {
                "dns_name": "vpce-08761ba602bfd1b09-n197fbtq.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08761ba602bfd1b09-n197fbtq-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08761ba602bfd1b09-n197fbtq-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0142504MAISWY53IBPR"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z06209501GZXDTTDRZGC7"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08761ba602bfd1b09",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0858f65989c7aa663",
              "eni-0fa6a8386f5c615db"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0abf1bdb572635b1d"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.79",
                "subnet_id": "subnet-0c4cd6b149f5e907a"
              },
              {
                "ipv4": "10.26.102.254",
                "subnet_id": "subnet-0539fe785f803f6af"
              }
            ],
            "subnet_ids": [
              "subnet-0539fe785f803f6af",
              "subnet-0c4cd6b149f5e907a"
            ],
            "tags": {
              "Name": "bos-vpce-ssmmessages01"
            },
            "tags_all": {
              "Name": "bos-vpce-ssmmessages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d91832dcb5d5e861"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-08761ba602bfd1b09",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "bos_alb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-028de5018af62a58b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-028de5018af62a58b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d732e4dfe934bd0c",
            "security_group_rule_id": "sgr-028de5018af62a58b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-028de5018af62a58b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-003b75e9eb14f2182",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-003b75e9eb14f2182",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-09191dbbd6ec29309",
            "security_group_rule_id": "sgr-003b75e9eb14f2182",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-003b75e9eb14f2182",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_ec2_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-0200557814d9d34f7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0200557814d9d34f7",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01599746f86c15f5a",
            "security_group_rule_id": "sgr-0200557814d9d34f7",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0200557814d9d34f7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_rds_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpce_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-0e497db85751cf9f2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0e497db85751cf9f2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0abf1bdb572635b1d",
            "security_group_rule_id": "sgr-0e497db85751cf9f2",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0e497db85751cf9f2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_alb_ingres_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-0315c64c0b7d90005",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0315c64c0b7d90005",
            "ip_protocol": "tcp",
            "prefix_list_id": "pl-3b927c52",
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d732e4dfe934bd0c",
            "security_group_rule_id": "sgr-0315c64c0b7d90005",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0315c64c0b7d90005",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_vpc.bos_vpc01",
            "data.aws_ec2_managed_prefix_list.bos_cf_origin_facing01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_alb_ingres_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-0c1c64633513bd950",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0c1c64633513bd950",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d732e4dfe934bd0c",
            "security_group_rule_id": "sgr-0c1c64633513bd950",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0c1c64633513bd950",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_ec2_ingress_from_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-03212c2c6d3bd4c6e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-03212c2c6d3bd4c6e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0d732e4dfe934bd0c",
            "region": "us-east-1",
            "security_group_id": "sg-09191dbbd6ec29309",
            "security_group_rule_id": "sgr-03212c2c6d3bd4c6e",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-03212c2c6d3bd4c6e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_security_group.bos_ec2_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_rds_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-0fa4f8a8e1708e0e7",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow MySQL access only from app tier EC2 instances",
            "from_port": 3306,
            "id": "sgr-0fa4f8a8e1708e0e7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-09191dbbd6ec29309",
            "region": "us-east-1",
            "security_group_id": "sg-01599746f86c15f5a",
            "security_group_rule_id": "sgr-0fa4f8a8e1708e0e7",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0fa4f8a8e1708e0e7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_ec2_sg01",
            "aws_security_group.bos_rds_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_vpce_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-09ab8f576339f900d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow EC2 SG access only for 443",
            "from_port": 443,
            "id": "sgr-09ab8f576339f900d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-09191dbbd6ec29309",
            "region": "us-east-1",
            "security_group_id": "sg-0abf1bdb572635b1d",
            "security_group_rule_id": "sgr-09ab8f576339f900d",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-09ab8f576339f900d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_ec2_sg01",
            "aws_security_group.bos_vpce_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    }
  ]
}